# anidl

./: Makefile  README.md  package.json  pyproject.toml
src/: index.ts
src/anidl/: __init__.py  __main__.py  config.py  providers.py  version.py
src/anidl/ui/: __init__.py  app.py  app.scss  app.tcss
src/anidl/ui/components/: __init__.py  alert.py  anime_list.py  downloaded_list.py  episode_list.py  popup.py  search_list.py  select_anime_dir.py
src/anidl/ui/ctx/: __init__.py  alert.py  global_assign.py  global_operation.py
src/anidl/ui/msgs/: alert.py
src/anidl/utils/: path.py  video.py
src/lib/: browser.ts  dir.ts  storage.ts
src/providers/: base.ts  index.ts  kisssub.ts  qdm.ts
